# climate-prediction-with-ml

./: README.md  SETUP.md
climate-prediction-with-ml/: LICENSE  Makefile  README.md  pyproject.toml
climate-prediction-with-ml/docs/: mkdocs.yml
climate-prediction-with-ml/docs/docs/: index.md
climate-prediction-with-ml/notebooks/: 01_data-preparation.ipynb
