[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "climate_prediction"
version = "0.0.1"
description = "Climate prediction using machine learning"
authors = [
  { name = "Rosa Lopez" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.14.0"


[tool.ruff]
line-length = 99
src = ["climate_prediction"]
include = ["pyproject.toml", "climate_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["climate_prediction"]
force-sort-within-sections = true

